[metadata]
# replace with your username:
name = whatsappchatbot
version = 0.0.2
author = Seemant Singh
author_email = seemantskype@gmail.com
description = Whatsapp chatbot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxsanwal/whatsappChatbot
project_urls =
    Bug Tracker = https://github.com/maxsanwal/whatsappChatbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src