[metadata]
# replace with your username:
name = whatsappchatbot
version = 0.0.4
author = Seemant Singh
author_email = seemantskype@gmail.com
description = Whatsapp chatbot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxsanwal/whatsappChatbot
project_urls =
    Bug Tracker = https://github.com/maxsanwal/whatsappChatbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    certifi==2020.12.5
    chardet==4.0.0
    click==7.1.2
    colorama==0.4.4
    configparser==5.0.2
    crayons==0.4.0
    idna==2.10
    joblib==1.0.1
    nltk==3.5
    numpy==1.20.1
    regex==2021.3.17
    requests==2.25.1
    scikit-learn==0.24.1
    scipy==1.6.1
    selenium==3.141.0
    sklearn==0.0
    threadpoolctl==2.1.0
    tqdm==4.59.0
    urllib3==1.26.4
    webdriver-manager==3.3.0

[options.packages.find]
where = src